fix: removed exec config and launch.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "editor.formatOnSave": true,
-  "craftos-pc.executablePath.windows": "C:\\Program Files\\CraftOS-PC\\CraftOS-PC_console.exe"
+  "editor.formatOnSave": true
 }
